Revert " Fix for Supporter Plus checkout country dropdown layout bug"

--- a/support-frontend/assets/components/countryGroupSwitcher/countryGroupSwitcher.module.scss
+++ b/support-frontend/assets/components/countryGroupSwitcher/countryGroupSwitcher.module.scss
@@ -11,7 +11,6 @@
 
 	:global(.svg-dropdown-arrow) {
 		position: inline-block;
-    margin-top: $gu-h-spacing*0.25;
 		margin-left: $gu-h-spacing*0.25;
 		path {
 			fill: currentColor;
